--- a/Views/tableTeachers.twig
+++ b/Views/tableTeachers.twig
@@ -1,6 +1,6 @@
 {% extends "index.twig" %}
 
-{% block title %}Таблица преподователей{% endblock %}
+{% block title %}Таблица преподавателей{% endblock %}
 {% block table %}
 <div>
     <table>
