--- a/Views/tableTeachers.twig
+++ b/Views/tableTeachers.twig
@@ -2,20 +2,23 @@
 
 {% block title %}Таблица преподавателей{% endblock %}
 {% block table %}
-    <div>
-        <table>
+    <h3>Таблица преподавателей</h3>
+    <table class="table table-bordered">
+        <thead class="thead-light">
+        <tr>
+            <th>ID</th>
+            <th>Имя пользователя</th>
+            <th>Тип</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for row in teachers %}
             <tr>
-                <th>ID</th>
-                <th>Имя пользователя</th>
-                <th>Тип</th>
+                <th>{{ row.id }}</th>
+                <th>{{ row.login }}</th>
+                <th>{{ row.type }}</th>
             </tr>
-            {% for row in teachers %}
-                <tr>
-                    <th>{{ row.id }}</th>
-                    <th>{{ row.login }}</th>
-                    <th>{{ row.type }}</th>
-                </tr>
-            {% endfor %}
-        </table>
-    </div>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
