--- a/Views/error404.twig
+++ b/Views/error404.twig
@@ -2,5 +2,9 @@
 
 {% block title %}Страница не найдена{% endblock %}
 {% block table %}
-        
+        <div class="container" style="text-align: center;">
+            <h1>Ой!</h1>
+            <h2>404 Not Found</h2>
+            <h4>Извините, запрошенная страница не найдена!</h4>
+        </div>
 {% endblock %}
