--- a/Views/index.twig
+++ b/Views/index.twig
@@ -27,14 +27,13 @@
                 <a class="nav-link" href="http://wenitalist.sshkpp.ru/teachers/">Преподаватели</a>
             </li>
         </ul>
+        <a class="nav-link" href="http://wenitalist.sshkpp.ru/authorization/" style="position: absolute; right: 0">Войти</a>
     </nav>
 </header>
 <main class="container-fluid">
-    <div class="container">
-        {% block table %}
-            <h1>Zdarova</h1>
-        {% endblock %}
-    </div>
+    {% block table %}
+
+    {% endblock %}
 </main>
 <footer class="footer">
     <div class="container">
