--- a/Views/tableStudents.twig
+++ b/Views/tableStudents.twig
@@ -2,23 +2,27 @@
 
 {% block title %}Таблица студентов{% endblock %}
 {% block table %}
-    <h3>Таблица студентов</h3>
-    <table class="table table-bordered">
-        <thead class="thead-light">
-        <tr>
-            <th>ID</th>
-            <th>Имя пользователя</th>
-            <th>Тип</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for row in students %}
+    <div class="container" style="background-color: #e9e8e8; border: 2px solid #9f9f9f;">
+        <h3>Таблица студентов</h3>
+        <table class="table table-bordered table-hover">
+            <thead class="thead-light">
             <tr>
-                <th>{{ row.id }}</th>
-                <th>{{ row.login }}</th>
-                <th>{{ row.type }}</th>
+                <th>ID</th>
+                <th>Имя пользователя</th>
+                <th>Тип</th>
+                <th>Подтвержден</th>
             </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for row in students %}
+                <tr>
+                    <th>{{ row.id }}</th>
+                    <th>{{ row.login }}</th>
+                    <th>{{ row.type }}</th>
+                    <th>{{ row.active }}</th>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
