--- a/Views/authorization.twig
+++ b/Views/authorization.twig
@@ -2,5 +2,19 @@
 
 {% block title %}Авторизация{% endblock %}
 {% block table %}
-
+    <div class="container" style="background-color: #e9e8e8; border-radius: 15px; width: 25%;">
+        <form method="POST" action="/authorizationScript/">
+            <h2 style="padding: 10px; text-align: center">Авторизация</h2>
+            <p>
+                <input name="loginAuth" class="form-control" type="text" maxlength="30" required placeholder="Имя пользователя"/>
+            </p>
+            <p>
+                <input name="passwordAuth" class="form-control" type="password" maxlength="30" required placeholder="Пароль"/>
+            </p>
+            <p style="text-align: right; margin-bottom: 10px;">
+                <a href="http://wenitalist.sshkpp.ru/registration/" type="button" class="btn btn-outline-secondary">Зарегистрироваться</a>
+                <input type="submit" name="enterAuth" class="btn btn-outline-success" required value="Войти"/>
+            </p>
+        </form>
+    </div>
 {% endblock %}
