--- a/Views/index.twig
+++ b/Views/index.twig
@@ -26,14 +26,24 @@
             <li class="nav-item">
                 <a class="nav-link" href="http://wenitalist.sshkpp.ru/teachers/">Преподаватели</a>
             </li>
+            {% if session.type == "admin" %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Администрирование</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">1 опция413414134</a>
+                        <a class="dropdown-item" href="#">2 опция</a>
+                        <a class="dropdown-item" href="#">3 опция</a>
+                    </div>
+                </li>
+            {% endif %}
         </ul>
         <ul class="navbar-nav" style="position: absolute; right: 0">
-        {% if session.login != null %}
-            <li><a class="nav-link">Вы вошли как: {{ session.login }}</a></li>
-            <li><a class="nav-link" href="/exit/">Выход</a></li>
-        {% else %}
-            <a class="nav-link" href="http://wenitalist.sshkpp.ru/authorization/">Авторизоваться</a>
-        {% endif %}
+            {% if session.login != null %}
+                <li><a class="nav-link">Вы вошли как: {{ session.login }}</a></li>
+                <li><a class="nav-link" href="/exit/">Выход</a></li>
+            {% else %}
+                <a class="nav-link" href="http://wenitalist.sshkpp.ru/authorization/">Авторизоваться</a>
+            {% endif %}
         </ul>
     </nav>
 </header>
