--- a/Views/index.twig
+++ b/Views/index.twig
@@ -33,7 +33,7 @@
         </ul>
         <ul class="navbar-nav" style="position: absolute; right: 0">
             {% if session.login != null %}
-                <li><a class="nav-link">Вы вошли как: {{ session.login }}</a></li>
+                <li><a class="nav-link" href="/personalArea/">Личный кабинет: {{ session.login }}</a></li>
                 <li><a class="nav-link" href="/exit/">Выход</a></li>
             {% else %}
                 <a class="nav-link" href="http://wenitalist.sshkpp.ru/authorization/">Авторизоваться</a>
