--- a/Views/authorization.twig
+++ b/Views/authorization.twig
@@ -6,7 +6,7 @@
         <form method="POST" action="/authorizationScript/">
             <h2 style="padding: 10px; text-align: center">Авторизация</h2>
             <p>
-                <input name="loginAuth" class="form-control" type="text" maxlength="30" required placeholder="Имя пользователя"/>
+                <input name="loginAuth" class="form-control" type="text" maxlength="30" required placeholder="Логин"/>
             </p>
             <p>
                 <input name="passwordAuth" class="form-control" type="password" maxlength="30" required placeholder="Пароль"/>
