--- a/Views/index.twig
+++ b/Views/index.twig
@@ -9,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 
+    <script type="text/javascript" src="/js/scripts.js"></script>
     <link rel="stylesheet" href="/css/style.css"/>
     <title>{% block title %}Дневник{% endblock %}</title>
 </head>
@@ -19,6 +20,12 @@
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="http://wenitalist.sshkpp.ru/">Главная</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://wenitalist.sshkpp.ru/teachers/">Преподаватели</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://wenitalist.sshkpp.ru/students/">Студенты</a>
             </li>
             {% if session.type == "admin" %}
                 <li class="nav-item dropdown">
@@ -33,7 +40,7 @@
         </ul>
         <ul class="navbar-nav" style="position: absolute; right: 0">
             {% if session.login != null %}
-                <li><a class="nav-link" href="/personalArea/">Личный кабинет: {{ session.login }}</a></li>
+                <li><a class="nav-link" href="/personalArea/">Личный кабинет: {{ session.fio }}</a></li>
                 <li><a class="nav-link" href="/exit/">Выход</a></li>
             {% else %}
                 <a class="nav-link" href="http://wenitalist.sshkpp.ru/authorization/">Авторизоваться</a>
