--- a/Views/personalArea.twig
+++ b/Views/personalArea.twig
@@ -10,8 +10,7 @@
             <p>Здесь вы можете настроить свой аккаунт, поменять пароль и т.д.</p>
         </div>
         <section style="width: 100%; height: 100%; display: flex;">
-            <div class="container"
-                 style="border: 1px solid #a4a4a9; border-radius: 8px; width: 49%; margin-right: 8px; margin-left: 8px; padding-right: 0; padding-left: 0">
+            <div class="container" style="border: 1px solid #a4a4a9; border-radius: 8px; width: 49%; margin-right: 8px; margin-left: 8px; padding-right: 0; padding-left: 0">
                 <form method="POST" action="/changePassword/">
                     <div class="container" style="width: 100%; padding: 12px">
                         <h5 style="margin-left: 1px">Изменить пароль</h5>
@@ -20,13 +19,31 @@
                         <p style="margin-bottom: 0"><input name="confirmPass" class="form-control" type="password" maxlength="30" required placeholder="Повторите пароль"/></p>
                     </div>
                     <div style="border-top: 1px solid #a4a4a9;"></div>
-                    <div class="container" style="width: 100%; padding-right: 0">
+                    <div class="container" style="width: 100%; padding-right: 0;">
                         <p style="text-align: right; margin: 5px">
-                            {% if session.changePassSuccessful == true %}<a style="color: green">Пароль успешно изменен</a>{% endif %}
-                            {% if session.changePassNewConfirmIncorrect == true %}<a style="color: red">Пароли не совпали</a>{% endif %}
-                            {% if session.changePassOldPassIncorrect == true %}<a style="color: red">Неверный старый пароль</a>{% endif %}
-                            {% if session.changePassNonAuthUser == true %}<a style="color: red">Вы не авторизованы</a>{% endif %}
+                            {% if session.changePassSuccessful == true %}<a style="color: green; padding-right: 10px;">Пароль успешно изменен</a>{% endif %}
+                            {% if session.changePassNewConfirmIncorrect == true %}<a style="color: red; padding-right: 10px;">Пароли не совпали</a>{% endif %}
+                            {% if session.changePassOldPassIncorrect == true %}<a style="color: red; padding-right: 10px;">Неверный старый пароль</a>{% endif %}
+                            {% if session.changePassNonAuthUser == true %}<a style="color: red; padding-right: 10px;">Вы не авторизованы</a>{% endif %}
                             <input type="submit" name="changePassword" class="btn btn-outline-success" required value="Изменить пароль"/>
+                        </p>
+                    </div>
+                </form>
+            </div>
+            <div class="container" style="border: 1px solid #a4a4a9; border-radius: 8px; width: 49%; margin-right: 8px; margin-left: 8px; padding-right: 0; padding-left: 0">
+                <form method="POST" action="/changeFio/">
+                    <div class="container" style="width: 100%; padding: 12px">
+                        <h5 style="margin-left: 1px">Изменить Ф.И.О.</h5>
+                        <p style="margin-bottom: 10px"><input name="oldFio" class="form-control" type="text" maxlength="50" required placeholder="Старое Ф.И.О."/></p>
+                        <p style="margin-bottom: 10px"><input name="newFio" class="form-control" type="text" maxlength="50" required placeholder="Новое Ф.И.О."/></p>
+                    </div>
+                    <div style="border-top: 1px solid #a4a4a9; margin-top: 38px"></div>
+                    <div class="container" style="width: 100%; padding-right: 0;">
+                        <p style="text-align: right; margin: 5px;">
+                            {% if session.changeFioSuccessful == true %}<a style="color: green; padding-right: 10px;">Ф.И.О. успешно изменено</a>{% endif %}
+                            {% if session.changeFioOldIncorrect == true %}<a style="color: red; padding-right: 10px;">Неверное старое Ф.И.О.</a>{% endif %}
+                            {% if session.changeFioNonAuthUser == true %}<a style="color: red; padding-right: 10px;">Вы не авторизованы</a>{% endif %}
+                            <input type="submit" name="changeFio" class="btn btn-outline-success" required value="Изменить Ф.И.О."/>
                         </p>
                     </div>
                 </form>
